[package]
name = "mirl_windowing_core"
version = "0.0.0-alpha"
edition.workspace = true
repository.workspace = true

[dependencies]
# mirl_core = { version = "0.0.0-alpha" }
mirl_extensions = { version = "0.0.0-alpha" }
mirl_system = { version = "0.0.0-alpha" }
mirl_input = { version = "0.0.0-alpha" }
mirl_buffer = { version = "0.0.0-alpha" }
# mirl_windowing_core = { version = "0.0.0-alpha", optional = true }

mirl_derive = { version = "0.0.0-alpha", optional = true }


# Codec
compactly = { version = "0.1.6", optional = true }
serde = { version = ">=1.0", optional = true, default-features = false, features = [
    "derive",
] }
bitcode = { version = "0.6.9", optional = true, default-features = false, features = [
    "derive",
] }
wincode = { version = "0.5.3", optional = true, features = ["derive"] }
zerocopy = { version = "0.8.48", optional = true, features = [
    "float-nightly",
    "derive",
] }

# Enum functionality
strum = { version = ">=0.28", optional = true, default-features = false, features = [
    "derive",
] }
enum_ext = { version = "0.6.0", optional = true, default-features = false }


# system
raw-window-handle = { version = ">=0.6.2", default-features = false }


# For random numbers
rand = { version = ">=0.9.2", optional = true, default-features = false, features = [
    "thread_rng",
] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = ">=0.3", features = ["Window"] }

[features]
default = ["std"]
std = []
all = [
    "all_codecs",
    "all_enum_extensions",
    # "minifb", "glfw"
]
_checking = ["all"]
# _checking = []

# Does nothing by itself. Needs another codec or enum flag to do something
mirl_derive = ["dep:mirl_derive"]
# Compatibility with ffi
c_compatible = ["mirl_derive"]
# Enables all codecs
all_codecs = ["serde", "bitcode", "wincode", "compactly", "zerocopy"]
# All enum extensions
all_enum_extensions = ["strum", "enum_ext"]

# Codec stuff
serde = ["dep:serde", "mirl_derive", "mirl_system/serde"]
bitcode = ["dep:bitcode", "mirl_derive", "mirl_system/bitcode"]
wincode = ["dep:wincode", "mirl_derive", "mirl_system/wincode"]
compactly = ["dep:compactly", "mirl_derive", "mirl_system/compactly"]
zerocopy = ["dep:zerocopy", "mirl_derive", "mirl_system/zerocopy"]

# Enum extensions
strum = ["dep:strum", "mirl_derive"]
enum_ext = ["dep:enum_ext", "mirl_derive"]


# keyboard_query = ["mirl/keyboard_query"]

cursor_show_hotspot = []

[build-dependencies]
mirl_build_tools = { workspace = true }
